lister les syllabus done

--- a/app/Resources/views/activity/index.html.twig
+++ b/app/Resources/views/activity/index.html.twig
@@ -56,7 +56,7 @@
                     </tbody>
                 </table>
             {% else %}
-                <div class="alert alert-info">Aucune activité n'a été enregistrée</div>
+                <div class="alert alert-info">Aucune activité n'a été trouvée avec ces critères</div>
             {% endif %}
         </div>
         <!-- /.card-body -->
