--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -56,7 +56,8 @@
                     </a>
                 </li>
                 <li class="nav-item menu-tab">
-                    <a class="nav-link" href="{{ path('edit_closing_remarks_course_info', { 'id': courseInfo.id }) }}">
+                    <a class="nav-link" href="{{ path('course_closing_remarks', { 'id': courseInfo.id }) }}"
+                       id="menu-closing_remarks">
                         <i>7</i>&nbsp;
                         <p>Le mot de la fin</p>
                     </a>
