tab "Le mot de la fin" fini

--- a/app/Resources/views/course_info/closing_remarks/form/closing_remarks.html.twig
+++ b/app/Resources/views/course_info/closing_remarks/form/closing_remarks.html.twig
@@ -16,7 +16,7 @@
             <div class="mt-3">
                 <label class="mt-6" placeholder="En quelle(s) langue(s) est dispensé ce cours (facultatif)">Intégrer une
                     ressource vidéo (ou audio) respectant la règlementation sur les droits d'auteur</label>
-                <i class="fas fa-exclamation-circle " data-toggle="tooltip" data-placement="bottom" data-html="true" title="{% include 'tooltip/closing_remarks_video.html.twig' %}"></i>
+                <i class="fas fa-exclamation-circle " data-toggle="tooltip" data-placement="right" data-html="true" title="{% include 'tooltip/closing_remarks_video.html.twig' %}"></i>
                 {{ form_widget(form.closingVideo) }}
             </div>
         </div>
