--- a/app/Resources/views/admin_layout.html.twig
+++ b/app/Resources/views/admin_layout.html.twig
@@ -61,7 +61,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="{{ path('app_admin_activity_index', { 'type' : constant('AppBundle\\Constant\\ActivityType::EVALUATION')}) }}" class="nav-link">
-                        <i class="nav-icon fas fa-file-alt"></i>
+                        <i class="nav-icon fas fa-music"></i>
                         <p>
                             Evaluations
                         </p>
@@ -72,6 +72,14 @@
                         <i class="nav-icon fas fa-file-alt"></i>
                         <p>
                             Syllabus
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{ path('app_admin_structure_index') }}" class="nav-link">
+                        <i class="nav-icon fas fa-building"></i>
+                        <p>
+                            Structures
                         </p>
                     </a>
                 </li>
