--- a/app/Resources/views/admin_layout.html.twig
+++ b/app/Resources/views/admin_layout.html.twig
@@ -83,6 +83,14 @@
                         </p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{{ path('app_admin_equipment_index') }}" class="nav-link">
+                        <i class="nav-icon fas fa-drafting-compass"></i>
+                        <p>
+                            Equipements
+                        </p>
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
