création d'équipement done

--- a/app/Resources/views/equipment/new.html.twig
+++ b/app/Resources/views/equipment/new.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Modifier un équipement' %}
+{% set h1 = 'Créer un équipement' %}
 {% block subContent %}
 
     {{ include('equipment/_form.html.twig') }}
