--- a/app/Resources/views/equipment/index.html.twig
+++ b/app/Resources/views/equipment/index.html.twig
@@ -10,8 +10,12 @@
                     <div class="col-md-3">
                         {{ form_row(form.label) }}
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_equipment_index')  }}">Réinitialiser les filtres</a>
+                    </div>
+                    <div class="offset-md-3"></div>
+                    <div class="col-md-3 col-sm-6">
+                        <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_equipment_new')  }}">Ajouter un équipement</a>
                     </div>
                 </div>
                 {{ form_end(form) }}
