--- a/app/Resources/views/structure/edit.html.twig
+++ b/app/Resources/views/structure/edit.html.twig
@@ -7,6 +7,8 @@
         <!-- form start -->
         {{ form_start(form) }}
         <div class="card-body">
+            {{ form_row(form.etbId) }}
+            {{ form_row(form.label) }}
             {{ form_row(form.campus) }}
             <div class="custom-control custom-switch">
                 {{ form_widget(form.obsolete) }}
