onglet info pratiques

--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -50,7 +50,8 @@
                     </a>
                 </li>
                 <li class="nav-item menu-tab">
-                    <a class="nav-link" href="{{ path('edit_infos_course_info', { 'id': courseInfo.id }) }}">
+                    <a class="nav-link" href="{{ path('course_info_info', { 'id': courseInfo.id }) }}"
+                       id="menu-info">
                         <i>6</i>&nbsp;
                         <p>Informations pratiques</p>
                     </a>
