--- a/app/Resources/views/activity/index.html.twig
+++ b/app/Resources/views/activity/index.html.twig
@@ -46,7 +46,7 @@
                     <tbody>
                     {% for activity in pagination %}
                         <tr>
-                            <td><a href="{{ path('app_admin_activity_edit', { 'id' : activity.id}) }}">{{ activity.label }}</a></td>
+                            <td><a href="{{ path('app_admin_activity_edit', { 'id' : activity.id, 'type' : type}) }}">{{ activity.label }}</a></td>
                             <td>{{ activity.mode|trans }}</td>
                             {% if isActivity %}
                                 <td>{{ activity.grp|trans }}</td>
