--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -412,3 +412,26 @@ th.sortable {
 
     }
 }
+
+/*
+  Loader
+ */
+
+.container-loader
+{
+  position: absolute;
+  right: 0;
+  height: 100%;
+  text-align: right;
+}
+
+.loader {
+  z-index: 2000;
+  background: #eee;
+  box-shadow: 1px 1px 8px #bbb;
+  padding: 2px;
+  position: sticky;
+  top: 0;
+  right: 0;
+  display: none;
+}
