--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,6 +29,11 @@
 </head>
 
 <body class="sidebar-mini layout-navbar-fixed">
+<div class="container-loader">
+    <div class="loader">
+        <i class="fas fa-circle-notch text-primary fa-2x fa-spin"></i>
+    </div>
+</div>
 <div id="app" class="wrapper">
     {% block main %}{% endblock %}
     <div id="loading_spinner"></div>
