--- a/app/Resources/views/admin_layout.html.twig
+++ b/app/Resources/views/admin_layout.html.twig
@@ -30,83 +30,7 @@
             </div>
         </div>
 
-        <!-- Sidebar Menu -->
-        {% macro printActiveSidebarLink(route, options) %}
-            {% if  route in  'app_admin_activity' %}
-                {{ app.request.attributes.get('type') == options.activityType ? 'active' }}
-            {% else %}
-                {{ route in app.request.get('_route') ? 'active'}}
-            {% endif %}
-        {% endmacro %}
-        <nav class="mt-2">
-            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <!-- Add icons to the links using the .nav-icon class
-                     with font-awesome or any other icon font library -->
-                <li class="nav-item">
-                    <a href="{{ path('app_admin_year_index') }}" class="nav-link {{ _self.printActiveSidebarLink('app_admin_year') }}">
-                        <i class="nav-icon fas fa-calendar"></i>
-                        <p>
-                            Années
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="{{ path('app_admin_user_index') }}" class="nav-link {{ _self.printActiveSidebarLink('app_admin_user') }}">
-                        <i class="nav-icon fas fa-user"></i>
-                        <p>
-                            Utilisateurs
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a
-                            href="{{ path('app_admin_activity_index', { 'type' : constant('AppBundle\\Constant\\ActivityType::ACTIVITY')}) }}"
-                            class="nav-link {{ _self.printActiveSidebarLink('app_admin_activity', {'activityType' : constant('AppBundle\\Constant\\ActivityType::ACTIVITY') }) }}"
-                    >
-                        <i class="nav-icon fas fa-film"></i>
-                        <p>
-                            Activités
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a
-                            href="{{ path('app_admin_activity_index', { 'type' : constant('AppBundle\\Constant\\ActivityType::EVALUATION')}) }}"
-                            class="nav-link {{ _self.printActiveSidebarLink('app_admin_activity', {'activityType' : constant('AppBundle\\Constant\\ActivityType::EVALUATION') }) }}"
-                    >
-                        <i class="nav-icon fas fa-music"></i>
-                        <p>
-                            Evaluations
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="{{ path('app_admin_course_info_index') }}" class="nav-link {{ _self.printActiveSidebarLink('app_admin_course_info') }}">
-                        <i class="nav-icon fas fa-file-alt"></i>
-                        <p>
-                            Syllabus
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="{{ path('app_admin_structure_index') }}" class="nav-link {{ _self.printActiveSidebarLink('app_admin_structure') }}">
-                        <i class="nav-icon fas fa-building"></i>
-                        <p>
-                            Structures
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="{{ path('app_admin_equipment_index') }}" class="nav-link {{ _self.printActiveSidebarLink('app_admin_equipment') }}">
-                        <i class="nav-icon fas fa-drafting-compass"></i>
-                        <p>
-                            Equipements
-                        </p>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <!-- /.sidebar-menu -->
+        {{ include('partial/_admin_sidebar.html.twig') }}
     </div>
 {% endblock %}
 
