--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -17,7 +17,7 @@
 
         <li class="nav-item">
             <a href="{{ path('app_admin_course_info_index') }}" class="nav-link {{ printActiveAdminSidebarLink(['app_admin_course_info']) }}">
-                <i class="nav-icon fas fa-file-alt"></i>
+                <i class="nav-icon fas fa-graduation-cap"></i>
                 <p>
                     Syllabus
                 </p>
@@ -27,7 +27,7 @@
         {% set referentielLink = ['app_admin_activity', 'app_admin_year', 'app_admin_evaluation', 'app_admin_equipment', 'app_admin_structure'] %}
         <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(referentielLink) ? 'menu-open' }}">
             <a href="#" class="nav-link {{ printActiveAdminSidebarLink(referentielLink) }}">
-                <i class="nav-icon fas fa-tachometer-alt"></i>
+                <i class="nav-icon fas fa-book"></i>
                 <p>
                     Référentiel
                     <i class="right fas fa-angle-left"></i>
@@ -61,7 +61,7 @@
                             href="{{ path('app_admin_activity_index', { 'type' : constant('AppBundle\\Constant\\ActivityType::EVALUATION')}) }}"
                             class="nav-link {{ printActiveAdminSidebarLink(['app_admin_activity'], {'activityType' : [constant('AppBundle\\Constant\\ActivityType::EVALUATION')] }) }}"
                     >
-                        <i class="nav-icon fas fa-music"></i>
+                        <i class="nav-icon fas fa-vial"></i>
                         <p>
                             Evaluations
                         </p>
@@ -92,7 +92,7 @@
             {% set administrationLink = ['app_admin_user'] %}
         <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(administrationLink) ? 'menu-open' }}">
             <a href="#" class="nav-link {{ printActiveAdminSidebarLink(administrationLink) }}">
-                <i class="nav-icon fas fa-tachometer-alt"></i>
+                <i class="nav-icon fas fa-cogs"></i>
                 <p>
                     Administration
                     <i class="right fas fa-angle-left"></i>
