onglet objectifs ( pas fini)

--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -32,7 +32,8 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link menu-tab" id="menu-objective"
-                       href="{{ path('edit_objectives_course_info', { 'id': courseInfo.id }) }}">
+                       href="{{ path('course_info_objectives', { 'id': courseInfo.id }) }}"
+                       id="menu-objectives_course">
                         <i>3</i>&nbsp;
                         <p>Objectifs du cours</p>
                     </a>
