--- a/app/Resources/views/default/menu.html.twig
+++ b/app/Resources/views/default/menu.html.twig
@@ -32,7 +32,9 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link menu-tab" href="#">
+                    <a class="nav-link menu-tab"
+                       id="menu-evaluation"
+                       href="{{ path('course_evaluation', { 'id': courseInfo.id }) }}">
                         Modalités d'évaluation
                     </a>
                 </li>
