--- a/app/Resources/views/course_info/presentation/form/general.html.twig
+++ b/app/Resources/views/course_info/presentation/form/general.html.twig
@@ -9,13 +9,9 @@
         {{ form_errors(form) }}
         <div class="row mt-3">
             <div class="col">
-                {{ form_widget(form.period) }}
-                <label placeholder="Période (facultatif)"></label>
-                {{ form_errors(form.domain) }}
-                {{ form_widget(form.domain) }}
-                <label placeholder="* Domaine"></label>
-                {{ form_widget(form.languages) }}
-                <label placeholder="En quelle(s) langue(s) est dispensé ce cours (facultatif)"></label>
+                {{ form_row(form.period) }}
+                {{ form_row(form.domain, {label_attr: {class: 'required'}}) }}
+                {{ form_row(form.languages) }}
             </div>
             <div class="col">
                 <label class="required font-weight-bold">
@@ -26,6 +22,67 @@
                 {{ form_widget(form.level, {label_attr: {class: 'radio-custom'} }) }}
             </div>
         </div>
+
+        <div class="row mt-2">
+            <div class="col">
+                <label class="required font-weight-bold">
+                    Résumé
+                </label>
+                {{ form_errors(form.summary) }}
+                {{ form_widget(form.summary) }}
+            </div>
+            <div class="col">
+                <label class="re">
+                    Intégrer une ressource vidéo (ou audio) ou téléverser un fichier image de présentation du cours, en respectant la règlementation sur les droits d'auteur.
+                </label>
+                {{ form_errors(form.video) }}
+                {{ form_errors(form.image) }}
+                {{ form_widget(form.mediaType) }}
+                {% set imageTabClasses = 'nav-link' %}
+                {% set imageContentClasses = 'tab-pane fade' %}
+                {% set videoTabClasses = 'nav-link' %}
+                {% set videoContentClasses = 'tab-pane fade' %}
+                {% if form.vars.value.mediaType == 'video' %}
+                    {% set videoTabClasses = videoTabClasses ~ ' active' %}
+                    {% set videoContentClasses = videoContentClasses ~ ' show active' %}
+                {% else %}
+                    {% set imageTabClasses = imageTabClasses ~ ' active' %}
+                    {% set imageContentClasses = imageContentClasses ~ ' show active' %}
+                {% endif %}
+                <ul class="nav nav-tabs" id="media_type" role="tablist">
+                    <li class="nav-item">
+                        <a class="{{ imageTabClasses }}" href="#media_image_container" role="tab" data-toggle="tab" data-media-type="image">
+                            Image
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="{{ videoTabClasses }}" href="#media_video_container" role="tab" data-toggle="tab" data-media-type="video">
+                            Vidéo
+                        </a>
+                    </li>
+                </ul>
+                <div class="tab-content border p-2">
+                    <div class="{{ imageContentClasses }}" id="media_image_container" role="tabpanel">
+                        <small class="font-weight-bold">Fichier de type jpeg ou png (2Mo maximum)</small>
+                        {{ form_widget(form.image, {label_attr: {class: 'file-custom'} }) }}
+                        {% if form.vars.data.image is not null %}
+                            {% if courseInfo.image == form.vars.data.image %}
+                                {% set imgSrc = form.vars.data.image.filename %}
+                            {% else %}
+                                {% set imgSrc = courseInfo.image %}
+                            {% endif %}
+                            <img class="img-thumbnail" id="media_image" src="{{ asset('data/' ~ imgSrc) }}">
+                        {% endif %}
+                    </div>
+                    <div class="{{ videoContentClasses }}" id="media_video_container" role="tabpanel">
+                        <img id="infos_video" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
+                        {{ form_widget(form.video) }}
+                        <label placeholder="URL"></label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="mt-2">
             <button type="submit" class="focus-submit btn btn-primary submit button-gradient" data-url="{{ path('course_presentation_general', {'id': courseInfo.id, 'action': 'submit' }) }}">
                 Sauvegarder
