ajout de la description pour la création et la modification d'activités

--- a/app/Resources/views/activity/edit.html.twig
+++ b/app/Resources/views/activity/edit.html.twig
@@ -9,6 +9,7 @@
         <div class="card-body">
 
             {{ form_row(form.label) }}
+            {{ form_row(form.description) }}
             {{ form_row(form.mode) }}
             {% if form.grp is defined %}
                 {{ form_row(form.grp) }}
