ajout de la liste des champs concernés par la duplication de syllabus

--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -110,5 +110,13 @@
             </ul>
         </li>
 
+        <li class="nav-item">
+            <a href="{{ path('app_admin_syllabus_duplication_field_index') }}" class="nav-link {{ printActiveAdminSidebarLink(['app_admin_syllabus_duplication_field']) }}">
+                <i class="nav-icon fas fa-copy"></i>
+                <p>
+                    Config duplication
+                </p>
+            </a>
+        </li>
     </ul>
 </nav>
