--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -70,36 +70,95 @@
     </div>
 {% endblock %}
 {% block content %}
-    <section class="content pt-2">
-        <div class="container-fluid">
-            {% block subContent %}{% endblock %}
-        </div>
-    </section>
+    <div class="container-fluid pt-2">
+        {% block subContent %}{% endblock %}
+    </div>
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
     <script>
         $(document).ready(function () {
-            $(document).on('click', '.update-focus', function () {
-                var updateFocus = $(this);
-                var card = updateFocus.closest('.toggle-focus');
-                var url = $(this).data("url");
-                var section = card.parent('section');
+            $('.card-syllabus').each( function () {
+                let $card = $(this);
+                let $cardBody = $card.find('.card-body');
+                let url = $card.data('view-url');
+                $.get(url, {
+                    beforeSend: function () {
+                        $cardBody.html('<div class="progress mx-auto" style="max-width: 95%"><div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div></div>')
+                    }
+                }).done(function (response) {
+                    if (Syllabus.handleAjaxResponseModal(response))
+                    {
+                        $cardBody.html(response["content"]);
+                    }
+                })
+            });
+
+            $(document).on('click', '.card-syllabus .edit-button', function () {
+                let $button = $(this);
+                let $card = $button.closest('.card-syllabus');
+                let $cardBody = $card.find('.card-body');
+                let url = $card.data("form-url");
+                $.get(url, {
+                    beforeSend: function () {
+                        $button.hide();
+                        $cardBody.html('<div class="progress mx-auto" style="max-width: 95%"><div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div></div>')
+                    }
+                }).done(function (response) {
+                    if (Syllabus.handleAjaxResponseModal(response))
+                    {
+                        $cardBody.html(response["content"]);
+                    }
+                })
+            });
+
+            $(document).on('click', '.card-syllabus .submit-button', function (e) {
+                let $button = $(this);
+                let $card = $button.closest('.card-syllabus');
+                let $cardBody = $card.find('.card-body');
+                let $editButton = $card.find('.edit-button');
+                let forms = $card.find('form');
+                let url = $card.data('form-url');
                 $.ajax({
                     url: url,
-                    method: "GET",
+                    enctype: 'multipart/form-data',
+                    processData: false, // Preventing default serialization.
+                    contentType: false, // No auto “contentType” header.
+                    data: new FormData( forms[0] ),
+                    method: "POST",
                     dataType: "html",
                     beforeSend: function () {
-                        updateFocus.attr("disabled", true).html('<i class="fas fa-spinner fa-spin"></i>');
-                        $('#app').addClass('hasActiveChild');
-                        $(card).addClass('active');
+                        $cardBody.html('<div class="progress mx-auto" style="max-width: 95%"><div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div></div>')
                     },
-                    success: function (data) {
-                        section.html(data);
+                    success: function (response) {
+                        e.preventDefault();
+                        $cardBody.html(response["content"]);
+                        $editButton.show();
                     }
                 });
             });
+
+            $(document).on('click', '.card-syllabus .cancel-button', function () {
+                let $button = $(this);
+                let $card = $button.closest('.card-syllabus');
+                let $cardBody = $card.find('.card-body');
+                let $editButton = $card.find('.edit-button');
+                let url = $card.data('view-url');
+                $.get(url, {
+                    beforeSend: function () {
+                        $cardBody.html('<div class="progress mx-auto" style="max-width: 95%"><div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div></div>')
+                    }
+                }).done(function (response) {
+                    if (Syllabus.handleAjaxResponseModal(response))
+                    {
+                        $cardBody.html(response["content"]);
+                    }
+                }).always(function () {
+                    $editButton.show();
+                })
+            });
+
             $(document).on('submit', 'form', function (e) {
                 e.preventDefault();
                 formSubmit($(this), 'submit');
@@ -111,16 +170,16 @@
 
         function formSubmit(element, action)
         {
-            var card = element.closest('.toggle-focus');
-            var section = card.parent('section');
-            var forms = card.find('form');
-            var focusSubmit = card.find('button.focus-submit');
-            var focusSubmitContent = focusSubmit.html();
-            var focusCancel = card.find('button.focus-cancel');
-            var focusCancelContent = focusCancel.html();
+            let card = element.closest('.toggle-focus');
+            let section = card.parent('section');
+            let forms = card.find('form');
+            let focusSubmit = card.find('button.focus-submit');
+            let focusSubmitContent = focusSubmit.html();
+            let focusCancel = card.find('button.focus-cancel');
+            let focusCancelContent = focusCancel.html();
 
-            var buttonClicked = action === 'cancel' ? focusCancel : focusSubmit;
-            var url = buttonClicked.data("url");
+            let buttonClicked = action === 'cancel' ? focusCancel : focusSubmit;
+            let url = buttonClicked.data("url");
             $.ajax({
                 url: url,
                 enctype: 'multipart/form-data',
