--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -417,6 +417,11 @@ th.sortable {
   Loader
  */
 
+.card-syllabus .progress
+{
+  border-radius: 5px;
+}
+
 .container-loader
 {
   position: absolute;
