--- a/app/Resources/views/course_info/presentation/form/general.html.twig
+++ b/app/Resources/views/course_info/presentation/form/general.html.twig
@@ -77,7 +77,7 @@
 </div>
 
 <div class="mt-2">
-    <button type="submit" class="submit-button btn btn-primary submit button-gradient" data-url="{{ path('course_presentation_general', {'id': courseInfo.id, 'action': 'submit' }) }}">
+    <button type="button" class="submit-button btn btn-primary submit button-gradient" data-url="{{ path('course_presentation_general', {'id': courseInfo.id, 'action': 'submit' }) }}">
         Sauvegarder
     </button>
     <button type="button" class="cancel-button btn btn-secondary button-gradient" data-url="{{ path('course_presentation_general', {'id': courseInfo.id, 'action': 'cancel' }) }}">
