new cards ajax complete

--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -57,7 +57,7 @@ main > small:first-of-type {
     Focus.
  */
 
-.hasActiveChild .toggle-focus:not(.active) {
+.hasActiveChild .card-syllabus:not(.active) {
   opacity: 0.2;
   pointer-events: none;
 }
