--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -103,7 +103,8 @@
                 $.get(url, {
                     beforeSend: function () {
                         $button.hide();
-                        $cardBody.html('<div class="progress mx-auto" style="max-width: 95%"><div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div></div>')
+                        $card.addClass('active');
+                        $('#app').addClass('hasActiveChild');
                     }
                 }).done(function (response) {
                     if (Syllabus.handleAjaxResponseModal(response))
@@ -128,9 +129,14 @@
                     data: new FormData( forms[0] ),
                     method: "POST",
                     dataType: "json",
+                    beforeSend: function () {
+                        $cardBody.html('<div class="progress mx-auto" style="max-width: 95%"><div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div></div>')
+                    }
                 }).done(function (response) {
                     $cardBody.html(response["content"]);
                     $editButton.show();
+                    $card.removeClass('active');
+                    $('#app').removeClass('hasActiveChild');
                 });
             });
 
@@ -142,7 +148,6 @@
                 let url = $card.data('view-url');
                 $.get(url, {
                     beforeSend: function () {
-                        $cardBody.html('<div class="progress mx-auto" style="max-width: 95%"><div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div></div>')
                     }
                 }).done(function (response) {
                     if (Syllabus.handleAjaxResponseModal(response))
@@ -151,52 +156,10 @@
                     }
                 }).always(function () {
                     $editButton.show();
+                    $card.removeClass('active');
+                    $('#app').removeClass('hasActiveChild');
                 })
             });
-
-            $(document).on('submit', 'form', function (e) {
-                e.preventDefault();
-                formSubmit($(this), 'submit');
-            });
-            $(document).on('click', '.focus-cancel', function () {
-                formSubmit($(this), 'cancel');
-            });
         });
-
-        function formSubmit(element, action)
-        {
-            let card = element.closest('.toggle-focus');
-            let section = card.parent('section');
-            let forms = card.find('form');
-            let focusSubmit = card.find('button.focus-submit');
-            let focusSubmitContent = focusSubmit.html();
-            let focusCancel = card.find('button.focus-cancel');
-            let focusCancelContent = focusCancel.html();
-
-            let buttonClicked = action === 'cancel' ? focusCancel : focusSubmit;
-            let url = buttonClicked.data("url");
-            $.ajax({
-                url: url,
-                enctype: 'multipart/form-data',
-                processData: false, // Preventing default serialization.
-                contentType: false, // No auto “contentType” header.
-                data: new FormData( forms[0] ),
-                method: "POST",
-                dataType: "html",
-                beforeSend: function () {
-                    focusSubmit.attr("disabled", true);
-                    focusCancel.attr("disabled", true);
-                    buttonClicked.html('<i class="fas fa-spinner fa-spin"></i>');
-                },
-                success: function (data) {
-                    $('#app').removeClass('hasActiveChild');
-                    $(card).removeClass('active');
-                    section.html(data);
-                }
-            }).always( function () {
-                focusSubmit.attr("disabled", false).html(focusSubmitContent);
-                focusCancel.attr("disabled", false).html(focusCancelContent);
-            });
-        }
     </script>
 {% endblock %}
