--- a/app/Resources/views/course_info/presentation/view/teachers.html.twig
+++ b/app/Resources/views/course_info/presentation/view/teachers.html.twig
@@ -1,66 +1,52 @@
-<div class="card toggle-focus my-2 shadow card-syllabus">
-    <div class="card-header">
-        <div class="d-flex justify-content-between">
-            <h3>Équipe enseignante</h3>
-            <button type="button" class="btn btn-primary button-gradient modal-action"
-                    data-action-title="Ajouter un enseignant"
-                    data-action-url="{{ path('course_presentation_teachers', {'id': courseInfo.id }) }}">
-                Ajouter un enseignant
-            </button>
-        </div>
-    </div>
-    {% if courseInfo.courseTeachers is empty %}
-        <div class="card-body">
-            <div class="row mt-3">
-                <div class="col">
-                    <div class="d-flex">
-                        <div class="d-flex flex-column">
-                            <span class="font-weight-bold">
-                                <i class="fas fa-exclamation-circle text-danger"></i>
-                                Équipe enseignante
-                            </span>
-                            <span class="text-danger">
-                                Non-renseigné
-                            </span>
-                        </div>
-                    </div>
+{% if courseInfo.courseTeachers is empty %}
+    <div class="row mt-3">
+        <div class="col">
+            <div class="d-flex">
+                <div class="d-flex flex-column">
+                    <span class="font-weight-bold">
+                        <i class="fas fa-exclamation-circle text-danger"></i>
+                        Équipe enseignante
+                    </span>
+                    <span class="text-danger">
+                        Non-renseigné
+                    </span>
                 </div>
             </div>
         </div>
-    {% else %}
-        <div class="card-body table-responsive p-0">
-            <table class="table table-hover">
-                <thead>
+    </div>
+{% else %}
+    <div class="table-responsive p-0">
+        <table class="table table-hover">
+            <thead>
+            <tr class="text-center">
+                <th>Nom</th>
+                <th>Prénom</th>
+                <th>Email</th>
+                <th>Responsable</th>
+                <th>Supprimer</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for teacher in courseInfo.courseTeachers %}
                 <tr class="text-center">
-                    <th>Nom</th>
-                    <th>Prénom</th>
-                    <th>Email</th>
-                    <th>Responsable</th>
-                    <th>Supprimer</th>
+                    <td>{{ teacher.lastname }}</td>
+                    <td>{{ teacher.firstname }}</td>
+                    <td>
+                        {{ teacher.emailVisibility ? 'Visible' : 'Invisible' }}
+                    </td>
+                    <td>
+                        {{ teacher.manager ? 'Oui' : 'Non' }}
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-link modal-action p-0"
+                                data-action-title="Supprimer un enseignant"
+                                data-action-url="{{ path('course_presentation_remove_teacher', {'id': courseInfo.id, 'teacherId': teacher.id}) }}">
+                            <i class="fas fa-trash-alt text-danger"></i>
+                        </button>
+                    </td>
                 </tr>
-                </thead>
-                <tbody>
-                {% for teacher in courseInfo.courseTeachers %}
-                    <tr class="text-center">
-                        <td>{{ teacher.lastname }}</td>
-                        <td>{{ teacher.firstname }}</td>
-                        <td>
-                            {{ teacher.emailVisibility ? 'Visible' : 'Invisible' }}
-                        </td>
-                        <td>
-                            {{ teacher.manager ? 'Oui' : 'Non' }}
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-link modal-action p-0"
-                               data-action-title="Supprimer un enseignant"
-                               data-action-url="{{ path('course_presentation_remove_teacher', {'id': courseInfo.id, 'teacherId': teacher.id}) }}">
-                                <i class="fas fa-trash-alt text-danger"></i>
-                            </button>
-                        </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    {% endif %}
-</div>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% endif %}
