--- a/app/Resources/views/course_info/objectives_course/view/prerequisite.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/prerequisite.html.twig
@@ -2,9 +2,10 @@
     <div class="card-header">
         <div class="d-flex justify-content-between">
             <h3>Prérequis</h3>
-            <button type="button" class="btn btn-primary button-gradient modal-action"
-                    data-action-title="Ajouter un enseignant"
-                    data-action-url="{{ path('course_presentation_teachers', {'id': courseInfo.id }) }}">
+            <button type="button"
+                    class="btn btn-primary button-gradient modal-action"
+                    data-action-title="Ajouter un prérequis"
+                    data-action-url="{{ path('objective_course_prerequisite', {'id': courseInfo.id }) }}">
                 Ajouter un prérequis
             </button>
         </div>
@@ -18,7 +19,7 @@
                         <div class="d-flex flex-column">
                             <span class="font-weight-bold">
                                 <i class="fas fa-exclamation-circle text-danger"></i>
-                                Équipe enseignante
+                                Prérequis
                             </span>
                             <span class="text-danger">
                                 Non-renseigné
@@ -43,7 +44,8 @@
                         <td class="text-left">{{ prerequisite.description }}</td>
                         <td class="text-center">
                             <button type="button" class="btn btn-link modal-action p-0"
-                                    data-action-title="Supprimer un enseignant">
+                                    data-action-title="Supprimer un prérequis"
+                                    data-action-url="{{ path('objective_course_remove_prerequisite', {'id': courseInfo.id, 'prerequisiteId': prerequisite.id}) }}">
                                 <i class="fas fa-trash-alt text-danger"></i>
                             </button>
                         </td>
