--- a/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
@@ -3,8 +3,8 @@
         <div class="d-flex justify-content-between">
             <h3>Remédiation / aide à la réussite</h3>
             <button type="button" class="btn btn-primary button-gradient modal-action"
-                    data-action-title="Ajouter un enseignant"
-                    data-action-url="{{ path('course_presentation_teachers', {'id': courseInfo.id }) }}">
+                    data-action-title="Ajouter une remédiation"
+                    data-action-url="{{ path('objective_course_tutoring_resources', {'id': courseInfo.id }) }}">
                 Ajouter une remédiation
             </button>
         </div>
@@ -33,7 +33,7 @@
                         <div class="d-flex flex-column">
                             <span class="font-weight-bold">
                                 <i class="fas fa-exclamation-circle text-danger"></i>
-                                Équipe enseignante
+                                Remédiation
                             </span>
                             <span class="text-danger">
                                 Non-renseigné
@@ -58,7 +58,8 @@
                         <td class="text-left">{{ tutoringResources.description }}</td>
                         <td class="text-center">
                             <button type="button" class="btn btn-link modal-action p-0"
-                                    data-action-title="Supprimer un enseignant">
+                                    data-action-title="Supprimer une remédiation"
+                                    data-action-url="{{ path('objective_course_remove_tutoring_resources', {'id': courseInfo.id, 'tutoringResourcesId': tutoringResources.id}) }}">
                                 <i class="fas fa-trash-alt text-danger"></i>
                             </button>
                         </td>
