--- a/app/Resources/views/course_info/presentation/view/general.html.twig
+++ b/app/Resources/views/course_info/presentation/view/general.html.twig
@@ -2,7 +2,8 @@
     <div class="card-header">
         <div class="d-flex justify-content-between">
             <h3>Général</h3>
-            <button type="button" class="update-focus btn btn-primary button-gradient" data-url="{{ path('course_presentation_general', {'id': courseInfo.id }) }}">Mettre à jour</button>
+            <button type="button" class="update-focus btn btn-primary button-gradient"
+                    data-url="{{ path('course_presentation_general', {'id': courseInfo.id }) }}">Mettre à jour</button>
         </div>
     </div>
     <div class="card-body">
