--- a/app/Resources/views/course_info/presentation/form/teachers.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teachers.html.twig
@@ -21,7 +21,7 @@
     </div>
 </div>
 <div class="d-flex justify-content-center">
-    <button type="submit" class="btn btn-primary button-gradient" id="create_button">
+    <button type="submit" class="btn btn-primary rounded" id="create_button">
         Ajouter
     </button>
 </div>
