--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -9,7 +9,7 @@
         <div class="card-header">
             <div class="d-flex justify-content-between">
                 <h3>Général</h3>
-                <button type="button" class="edit-button btn btn-primary button-gradient">
+                <button type="button" class="edit-button btn btn-primary rounded">
                     Mettre à jour
                 </button>
             </div>
@@ -24,7 +24,7 @@
         <div class="card-header">
             <div class="d-flex justify-content-between">
                 <h3>Équipe enseignante</h3>
-                <button type="button" class="btn btn-primary button-gradient modal-action"
+                <button type="button" class="btn btn-primary modal-action rounded"
                         data-action-title="Ajouter un enseignant"
                         data-action-url="{{ path('course_presentation_teachers_form', {'id': courseInfo.id }) }}">
                     Ajouter un enseignant
