--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -136,10 +136,10 @@
             </div>
         </div>
         <div class="mt-2">
-            <button class="focus-submit btn btn-primary submit button-gradient" type="submit" data-url="{{ path('course_presentation_teaching_mode', {'id': courseInfo.id, 'action': 'submit' }) }}">
+            <button class="focus-submit btn btn-primary submit rounded" type="submit" data-url="{{ path('course_presentation_teaching_mode', {'id': courseInfo.id, 'action': 'submit' }) }}">
                 Sauvegarder
             </button>
-            <button type="button" class="focus-cancel btn btn-secondary button-gradient" data-url="{{ path('course_presentation_teaching_mode', {'id': courseInfo.id, 'action': 'cancel' }) }}">
+            <button type="button" class="focus-cancel btn btn-secondary rounded" data-url="{{ path('course_presentation_teaching_mode', {'id': courseInfo.id, 'action': 'cancel' }) }}">
                 Annuler
             </button>
         </div>
