--- a/app/Resources/views/course_info_field/index.html.twig
+++ b/app/Resources/views/course_info_field/index.html.twig
@@ -6,23 +6,23 @@
     <div class="card">
         
         <div class="card-body">
-            {% if syllabusDuplicationFields %}
-                <table class="table table-bordered table-responsive-sm">
+            {% if courseInfoFields %}
+                <table class="table table-striped table-bordered table-responsive-sm">
                     <thead>
                     <tr>
-                        <th>{{ 'app.form.syllabus_duplication_field.label.label'|trans }}</th>
-                        <th>{{ 'app.form.syllabus_duplication_field.label.import'|trans }}</th>
+                        <th>{{ 'app.form.course_info_field.label.label'|trans }}</th>
+                        <th>{{ 'app.form.course_info_field.label.import'|trans }}</th>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for field in syllabusDuplicationFields %}
+                    {% for field in courseInfoFields %}
                         <tr>
                             <td>{{ field.label }}</td>
                             <td>
                                 {% set formView = form.createView %}
-                                {{form_start(formView, { 'attr' : { 'data-url' : path('app_admin_syllabus_duplication_field_edit', { 'id' : field.id }) }})}}
+                                {{form_start(formView, { 'attr' : { 'data-url' : path('app_admin_course_info_field_edit', { 'id' : field.id }) }})}}
                                     <div class="custom-control custom-switch">
-                                        {{ form_widget(formView.import, { 'id' : formView.import.vars.id ~ '_' ~ field.id, 'attr' : { 'class' : 'custom-control-input syllabus-duplication-field-edit-ajax', 'checked' : field.import } }) }}
+                                        {{ form_widget(formView.manuallyDuplication, { 'id' : formView.manuallyDuplication.vars.id ~ '_' ~ field.id, 'attr' : { 'class' : 'custom-control-input course-info-field-edit-ajax', 'checked' : field.manuallyDuplication } }) }}
                                         {{ form_widget(formView._token, { 'id' : formView._token.vars.id ~ '_' ~ field.id }) }}
                                     </div>
                                 {{ form_end(formView) }}
